--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			--default: 16px;
 
 			/*font families*/
-			--heading-font: "Barlow", sans-serif;
-			--default-font: "Barlow", sans-serif;
-			--accent-font: "Barlow", sans-serif;
+			--heading-font: "Anton", sans-serif;
+			--default-font: "Josefin Sans", sans-serif;
+			--accent-font: "Anton", sans-serif;
 		}
 		@media(max-width: 1000px){
 			:root{
