--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		/*Theme Variables*/
 		:root{
 			/*site colors*/
-			--color-1: #e60e75;
-			--color-2: #e60e75;
+			--color-1: #ee4d5e;
+			--color-2: #ee4d5e;
 
 			/*font sizes*/
 			--xl: 55px;
