--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				<div class="img-container">
 					<picture>
 						<!-- <source srcset="" type=""> -->
-						<img src="<?= <?= wp_get_attachment_url(21); ?>" alt="anton sitting smiling" width="680" height="845">
+						<!-- <img src="<?= <?= wp_get_attachment_url(21); ?>" alt="anton sitting smiling" width="680" height="845"> -->
 					</picture>
 				</div>
 
@@ -299,7 +299,7 @@
 
 				<div class="image-bio">
 					<div class="image-container">
-						<img data-url="<?= wp_get_attachment_url(18); ?>" width="500" height="500" alt="anton sitting">
+						<!-- <img data-url="<?= wp_get_attachment_url(18); ?>" width="500" height="500" alt="anton sitting"> -->
 					</div>
 					<div class="bio">
 						<ul>
@@ -371,14 +371,14 @@
 			<div class="content-width">
 				<h2>My <span>Portfolio</span></h2>
 				<p class="tagline">Just a few (of many) cool sites I've developed freelancing or at my jobs:</p>
-				<div class="portfolio-container">
+				<!-- <div class="portfolio-container">
 					<a href="https://smstrial.com/" class="indiv-portfolio" target="_blank" rel="nofollow, noindex, noreferrer, noopener"><img data-url="<?= <?= wp_get_attachment_url(37); ?>" width="500" height="375" alt="sms"></a>
 					<a href="https://floridajustice.com/" class="indiv-portfolio" target="_blank" rel="nofollow, noindex, noreferrer, noopener"><img data-url="<?= <?= wp_get_attachment_url(34); ?>" width="500" height="375" alt="john phillips"></a>
 					<a href="https://johnston-lawfirm.com/" class="indiv-portfolio" target="_blank" rel="nofollow, noindex, noreferrer, noopener"><img data-url="<?= <?= wp_get_attachment_url(35); ?>" width="500" height="375" alt="johnston law firm"></a>
 					<a href="https://www.joshgreenracing.com/" class="indiv-portfolio" target="_blank" rel="nofollow, noindex, noreferrer, noopener"><img data-url="<?= <?= wp_get_attachment_url(36); ?>" width="500" height="375" alt="josh green racing"></a>
 					<a href="https://inwithcorp.com/" class="indiv-portfolio" target="_blank" rel="nofollow, noindex, noreferrer, noopener"><img data-url="<?= <?= wp_get_attachment_url(33); ?>" width="500" height="375" alt="inwith corp"></a>
 					<a href="https://christuff.me/" class="indiv-portfolio" target="_blank" rel="nofollow, noindex, noreferrer, noopener"><img data-url="<?= <?= wp_get_attachment_url(32); ?>" width="500" height="375" alt="chris tuff"></a>
-				</div>
+				</div> -->
 			</div>
 		</section>
 
